# git-vibe

./: .gitignore  Cargo.toml  LICENSE  README.ko.md  README.md  README.zh-CN.md  기획서.md
.github/actions/git-vibe/: Dockerfile  action.yml  entrypoint.sh
.github/workflows/: release.yml
docs/01-plan/features/: v0.2-share.plan.md
docs/03-analysis/: git-vibe.analysis.md  v0.2-share.analysis.md
docs/04-report/: git-vibe.report.md
docs/04-report/features/: v0.2-share.report.md
docs/archive/2026-03/: _INDEX.md
docs/archive/2026-03/git-vibe/: git-vibe.analysis.md  git-vibe.design.md  git-vibe.plan.md
docs/archive/2026-03/v0.2-share/: v0.2-share.design.md
npm/cli-darwin-arm64/: package.json
npm/cli-darwin-x64/: package.json
npm/cli-linux-arm64/: package.json
npm/cli-linux-x64/: package.json
npm/cli-win32-arm64/: package.json
npm/cli-win32-x64/: package.json
npm/git-vibe/: package.json
src/: cli.rs  error.rs  lib.rs  main.rs
src/git/: authors.rs  commits.rs  ghosts.rs  hotspots.rs  mod.rs  mood.rs
src/output/: badge.rs  json.rs  mod.rs  svg.rs  terminal.rs
src/scoring/: grades.rs  mod.rs
tests/: cli_tests.rs
