[package]
name = "git-vibe"
version = "0.2.0"
edition = "2021"
description = "🎭 Vibe check your codebase - Git history analysis with emoji-based reports"
license = "MIT"
repository = "https://github.com/calintzy/git-vibe"
keywords = ["git", "analysis", "cli", "vibe", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
gix = { version = "0.72", default-features = false, features = ["basic", "parallel"] }
clap = { version = "4", features = ["derive"] }
colored = "3"
comfy-table = "7"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
resvg = { version = "0.44", optional = true }

[features]
default = []
png = ["dep:resvg"]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[[bin]]
name = "git-vibe"
path = "src/main.rs"
